Added buttons and constraints

--- a/TicTacToeIOS/TicTacToeIOS/TicTacToeIOS.csproj
+++ b/TicTacToeIOS/TicTacToeIOS/TicTacToeIOS.csproj
@@ -109,6 +109,10 @@
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScoreBoard.cs" />
+    <Compile Include="ScoreBoard.designer.cs">
+      <DependentUpon>ScoreBoard.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
